# war3_map_parser

./: (2)EchoIsles.w3m  CMakeLists.txt  main.cpp  test.w3m
assets/: Doodads.slk  Doodads.xls
data_objects/: block_table_entry.cpp  block_table_entry.h  hash_table_entry.cpp  hash_table_entry.h
data_objects/parser_inner_object/: TexCoord.cpp  TexCoord.h  Vertex.cpp  Vertex.h
data_objects/war3_inner_object/: special_doodads_entry.cpp  special_doodads_entry.h  tileset_entry.cpp  tileset_entry.h  tree_entry.cpp  tree_entry.h
decompressors/: abstract_decompressor.cpp  abstract_decompressor.h  bz_decompressor.cpp  bz_decompressor.h  zLib_decompressor.cpp  zLib_decompressor.h
file_utils/: csv_parser.cpp  csv_parser.h  csv_parser_structs.h  destructable_unit_parser.cpp  destructable_unit_parser.h  doodads_csv_parser.cpp  doodads_csv_parser.h  terrain_csv_parser.cpp  terrain_csv_parser.h
map_parser/: abstract_map_file_parser.cpp  abstract_map_file_parser.h  doodads_parser.cpp  doodads_parser.h  enviroment_file_map_parser.cpp  enviroment_file_map_parser.h  header_parser.cpp  header_parser.h  map_parser.cpp  map_parser.h  mpq_parser.cpp  mpq_parser.h  util.cpp  util.h
mdx_parser/: mdx_model.cpp  mdx_model.h  mdx_parser.cpp  mdx_parser.h
mdx_parser/data/: extent.h  node.h  track.h
mdx_parser/mdx_handlers/: bone_handler.cpp  bone_handler.h  geoa_handler.cpp  geoa_handler.h  geos_handler.cpp  geos_handler.h  glbs_handler.cpp  glbs_handler.h  handler.cpp  handler.h  help_handler.cpp  help_handler.h  modl_handler.cpp  modl_handler.h  mtls_handler.cpp  mtls_handler.h  pivt_handler.cpp  pivt_handler.h  seqs_handler.cpp  seqs_handler.h  snds_handler.cpp  snds_handler.h  texs_handler.cpp  texs_handler.h  txan_handler.cpp  txan_handler.h  vers_handler.cpp  vers_handler.h
mdx_parser/mdx_handlers/track_handlers/: kgac_handler.cpp  kgac_handler.h  kgao_handler.cpp  kgao_handler.h  kgrt_handler.cpp  kgrt_handler.h  kgsc_handler.cpp  kgsc_handler.h  kgtr_handler.cpp  kgtr_handler.h  kmta_handler.cpp  kmta_handler.h  kmtf_handler.cpp  kmtf_handler.h  track_handler.cpp  track_handler.h
test/: test_tileset.cpp
